# hpackage

./: cookiecutter.json
{{cookiecutter.name}}/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.py
{{cookiecutter.name}}/.github/workflows/: lint_and_format.yaml
{{cookiecutter.name}}/source/{{cookiecutter.name}}/: cli.py  main.py
